--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
 					<execution>
              					<id>attach-sources</id>
               					<goals>
-               					   <goal>war</goal>
+               					   <goal>jar</goal>
                					 </goals>
              				 </execution>
           			</executions>
