--- a/pom.xml
+++ b/pom.xml
@@ -77,14 +77,26 @@
 						</goals>
 						<phase>site</phase>
 					</execution>
-					<execution>
-             					<id>attach-sources</id>
-              					<goals>
-               					   <goal>jar</goal>
-               					 </goals>
-             				 </execution>
-          			</executions>
+				</executions>
 			</plugin>
+			<plugin>
+					<artifactId>maven-source-plugin</artifactId>
+					<version>3.1.0</version>
+					<!-- Build source artifact in addition to main artifact. -->
+					<executions>
+						<execution>
+							<id>attach-sources</id>
+							<goals>
+								<!--
+								NB: We use jar rather than jar-no-fork to avoid a bug where
+								the -sources JAR gets generated and deployed twice. See:
+								https://issues.apache.org/jira/browse/MNG-5939
+								-->
+								<goal>jar</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
